# nft_task

./: 00_init.sql  01_test_data_populate.sql  Dockerfile  README.md  docker-compose.yml  init.rabbitmq.sh  pyproject.toml  run.py
app/: __init__.py
app/main/controller/: transactions.py
app/main/database/: __init__.py  tables.py
app/main/messaging/: rabbitmq.py
app/main/model/: assets.py  commons.py  transactions.py
app/main/router/: transactions.py
